--- a/CorujaPresentation/Views/Shared/_Layout.cshtml
+++ b/CorujaPresentation/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                         <li class="active">@Html.ActionLink("Parceiros", "Parceiros", "Home", null, new { @class = "header" })</li>
                         <li class="active">@Html.ActionLink("FAQ", "FAQ", "Home", null, new { @class = "header" })</li>
 
-                        <li class="active">@Html.ActionLink("Admin", "Index", "Admin", null, new { @class = "header" })</li>
+                        <li class="active">@Html.ActionLink("Admin", "AdminCoruja", "Admin", null, new { @class = "header" })</li>
                         <li class="active">@Html.ActionLink("Conteúdo", "Index", "Conteudo", null, new { @class = "header" })</li>
 
                     </ul>
