--- a/CorujaPresentation/Views/Conta/ConfirmacaoEmail.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoEmail.cshtml
@@ -2,9 +2,37 @@
     ViewBag.Title = "Confirmação de Email";
 }
 
-<h2>@ViewBag.Title.</h2>
-<div>
-    <p>
-        Obrigado por confirmar seu Email. @Html.ActionLink("Entrar no espaço Coruja", "Login", "Conta", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
-</div>
+
+<section id="Confirmacao" class="section section-gray">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Conta Coruja</h2>
+
+        <div class="row centered-form">
+
+            <div class="panel-group">
+
+                <div class="panel panel-default">
+
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">Confirmação</h3>
+                    </div>
+
+                    <p>
+                        Obrigado por confirmar seu Email. @Html.ActionLink("Entrar no espaço Coruja", "Login", "Conta", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+</section>
