--- a/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
@@ -2,12 +2,36 @@
     ViewBag.Title = "Confirmação de Senha";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Verifique seu Email para redefinir sua senha
-    </p>
-</div>
-	
+<section id="Confirmacao" class="section section-gray">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Conta Coruja</h2>
+
+        <div class="row centered-form">
+
+            <div class="panel-group">
+
+                <div class="panel panel-default">
+
+                    <div class="panel-heading">
+                        <h3 class="panel-title text-center">Verificar Senha</h3>
+                    </div>
+
+                    <p>
+                        Verifique seu Email para redefinir sua senha
+                    </p>
+
+
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+
+</section>
