--- a/CorujaPresentation/Views/Admin/DefineUserRoles.cshtml
+++ b/CorujaPresentation/Views/Admin/DefineUserRoles.cshtml
@@ -1,16 +1,63 @@
 ﻿
 @{
     ViewBag.Title = "DefineUserRoles";
-         Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>DefineUserRoles</h2>
 
-  <!--Select the Role Type for the User-->
-<div class="form-group">
-    @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
-    <div class="col-md-10">
-        @Html.DropDownList("Name")
+
+<style type="text/css">
+    #tbrole, .c {
+        border: double;
+    }
+</style>
+
+
+
+<!-- COMO FUNCIONA	================================= -->
+<section class="section section-gray">
+
+    <div class="container">
+        <h2 class="section-heading text-center">Define User Roles</h2>
+
+        <div class="row">
+
+            <div class="col-lg-4 col-md-4 col-sm-4">
+
+
+                <h4 style="border-bottom: 1px solid #c5c5c5;">
+                    <i class="glyphicon glyphicon-circle-arrow-right">
+                    </i>
+                    Define User Roles
+                </h4>
+
+                <div style="padding: 20px">
+
+
+                    <fieldset>
+
+                        <!--Select the Role Type for the User-->
+
+                        <div class="form-group">
+                            @Html.Label("Select Your User Type", new { @class = "col-md-2 control-label" })
+                            <div class="col-md-10">
+                                @Html.DropDownList("Name")
+                            </div>
+                        </div>
+                        <!--Ends Here-->
+
+                    </fieldset>
+
+                    <div class="cleaner_h30"></div>
+
+                </div>
+
+
+            </div>
+        </div>
+
     </div>
-</div>
-<!--Ends Here-->
+
+</section>
+
+
