--- a/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/LembrarSenha.cshtml
@@ -3,26 +3,63 @@
     ViewBag.Title = "Esqueceu sua senha?";
 }
 
-<h2>@ViewBag.Title.</h2>
 
-@using (Html.BeginForm("LembrarSenha", "Conta", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Preencher campo Email</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+<section id="EsqueceuSenha" class="section section-gray">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Esqueceu sua senha?</h2>
+
+        <div class="row centered-form">
+
+            <div class="panel-group">
+
+                <div class="panel panel-default">
+
+                    <div class="panel-body">
+
+                        @using (Html.BeginForm("LembrarSenha", "Conta", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                        {
+                            @Html.AntiForgeryToken()
+                            <h4>Preencher campo Email</h4>
+                            <hr />
+                            @Html.ValidationSummary("", new { @class = "text-danger" })
+
+                            <div class="col-xs-6">
+
+                                <div class="form-group">
+                                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                                    <div class="col-md-10">
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                                    </div>
+                                </div>
+
+                                <div class="form-group">
+                                    <div class="col-md-offset-2 col-md-10">
+                                        <input type="submit" class="btn btn-default" value="Email Link" />
+                                    </div>
+                                </div>
+
+                            </div>
+                        }
+
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
+
+
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
-}
+
+</section>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
