--- a/CorujaPresentation/Views/Conta/ConfirmacaoResetSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoResetSenha.cshtml
@@ -10,27 +10,21 @@
 
         <h2 class="section-heading text-center">Conta Coruja</h2>
 
-        <div class="row centered-form">
+        <div class="row">
 
-            <div class="panel-group">
+            <div class="col-sm-4 col-sm-offset-4">
 
-                <div class="panel panel-default">
-
-                    <div class="panel-heading">
-                        <h3 class="panel-title text-center">Verificar Senha</h3>
+                    <div class="">
+                        <h3 class="">Verificar Senha</h3>
                     </div>
 
                     <p>
                         Sua senha foi alterada. Click @Html.ActionLink("Entrar", "Login", "Conta", routeValues: null, htmlAttributes: new { id = "loginLink" })
                     </p>
 
-
-
                 </div>
 
             </div>
-
-        </div>
 
 
     </div>
