--- a/CorujaPresentation/Views/Conta/Login.cshtml
+++ b/CorujaPresentation/Views/Conta/Login.cshtml
@@ -6,7 +6,6 @@
 
 <section id="Cadastro" class="section section-gray">
 
-
     <div class="container">
 
         <div class="wrapperLogin">
@@ -16,7 +15,7 @@
             <div class="row">
 
 
-                <div class="col-lg-6 col-md-7 col-sm-9">
+                <div class="col-sm-4 col-sm-offset-4">
 
                     <h4 style="border-bottom: 1px solid #c5c5c5;">
                         <i class="glyphicon glyphicon-user">
@@ -47,7 +46,6 @@
                                     @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Senha" })
                                     @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                                 </div>
-
 
                                 <div class="form-group">
 
