--- a/CorujaPresentation/Views/Shared/Error.cshtml
+++ b/CorujaPresentation/Views/Shared/Error.cshtml
@@ -4,6 +4,21 @@
     ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
+
+<section id="Error" class="section section-gray">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Canal Coruja</h2>
+
+        <div class="row">
+
+             <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
+
+         </div>
+
+    </div>
+
+</section>
