--- a/CorujaPresentation/Views/Admin/RoleList.cshtml
+++ b/CorujaPresentation/Views/Admin/RoleList.cshtml
@@ -9,7 +9,8 @@
 
 
 <style type="text/css">
-    #tbrole, .c {
+    #tbrole, .c 
+    {
         border: double;
     }
 </style>
@@ -24,8 +25,6 @@
         <div class="row">
 
             <div class="col-lg-4 col-md-4 col-sm-4">
-
-
 
                 <h4 style="border-bottom: 1px solid #c5c5c5;">
                     <i class="glyphicon glyphicon-circle-arrow-right">
