--- a/CorujaPresentation/Views/Home/Testes.cshtml
+++ b/CorujaPresentation/Views/Home/Testes.cshtml
@@ -4,104 +4,76 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Testes</h2>
-
-<div class="container">
-
-    <div class="row">
-
-        <div class="col-sm-4">
-
-            <div class="btn">Hey you</div>
-        
-        </div>
-            
-        <div class="col-sm-4">
-
-            <div class="btn btn-sm btn-primary">Hey you</div>
-            <div class="btn btn-lg btn-primary"> Hey you</div>
-
-        </div>
-
-        <div class="col-sm-4">
-
-            <div class="btn btn-sm btn-primary">Hey you</div>
-            <div class="btn btn-lg btn-primary"> Hey you</div>
-
-        </div>
-
-    </div>
-
-</div>
-
-<div class="container">
-
-    <h2 class="section-heading text-center">Conta Coruja</h2>
-
-    <div class="row-centered">
-
-        <div class="col-centered">
-
-            <div id="wrapper">
-
-                <div id="login">
-
-                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-            {
-                        @Html.AntiForgeryToken()
-                        <h4>Entre na sua conta Coruja</h4>
-                            <hr />
-                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
 
-                            <div class="form-group">
+<section class="section section-gray">
+    
+    <div class="container">
+       
+        <h2 class="section-heading text-center">Canal Coruja</h2>
 
-                                <div class="col-md-3">
-                                    @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label", placeholder = "Senha" })
-                                </div>
-                                <div class="col-md-7">
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control input-sm" })
-                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                </div>
-                            </div>
+        <div class="row">
+           
+            <div class="col-sm-4">
+                <div class="form-group input-group">
+                    <span class="input-group-addon">
+                        <i class="glyphicon glyphicon-envelope">
+                        </i>
+                    </span>
+                    <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
 
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <div class="checkbox">
-                                        @Html.CheckBoxFor(m => m.RememberMe)
-                                        @Html.LabelFor(m => m.RememberMe)
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
-                                    <input type="submit" value="Log in" class="btn-block" />
-                                </div>
-                            </div>
-
-
-
-
-                            <div class="form-group">
-
-                                <p>
-                                    @Html.ActionLink("Cadastrar-se", "Cadastro")
-                                </p>
-
-                                <p>
-                                    @Html.ActionLink("Esqueceu sua senha?", "LembrarSenha")
-                                </p>
-
-                            </div>
-
-                    }
                 </div>
 
             </div>
 
+            <div class="col-sm-4"></div>
+
+            <div class="col-sm-4"></div>
+ 
+            
+             
+              
+
+            </div>
+
+    </div>
+
+</section>
+
+
+
+<section class="section section-red">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Canal Coruja</h2>
+
+        <div class="row">
+
+            <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
+
         </div>
 
     </div>
 
-</div>
+</section>
+
+
+
+<section class="section section-dark">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center">Canal Coruja</h2>
+
+        <div class="row">
+
+            <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
+
+        </div>
+
+    </div>
+
+</section>
