--- a/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
+++ b/CorujaPresentation/Views/Conta/ConfirmacaoLembrarSenha.cshtml
@@ -2,36 +2,29 @@
     ViewBag.Title = "Confirmação de Senha";
 }
 
-<section id="Confirmacao" class="section section-gray">
+
+
+<section id="ConfirmacaoLembrarSenha" class="section section-gray">
 
 
     <div class="container">
 
         <h2 class="section-heading text-center">Conta Coruja</h2>
 
-        <div class="row centered-form">
 
-            <div class="panel-group">
-
-                <div class="panel panel-default">
-
-                    <div class="panel-heading">
-                        <h3 class="panel-title text-center">Verificar Senha</h3>
-                    </div>
-
-                    <p>
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="alert-message alert-message-warning">
+                    <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
+                    <h4>
                         Verifique seu Email para redefinir sua senha
-                    </p>
-
-
+                    </h4>
 
                 </div>
-
             </div>
-
         </div>
-
 
     </div>
 
 </section>
+
