--- a/CorujaPresentation/Content/site.css
+++ b/CorujaPresentation/Content/site.css
@@ -36,7 +36,23 @@ a {
         color:#f0ad4e;
     }
 
-       
+  
+    
+ .a {
+    -webkit-transition: all ease 0.25s;
+    transition: all ease 0.25s;
+    color: #D7451F;
+    text-decoration: underline;
+}   
+ 
+ .a:focus, a:hover {
+        text-decoration: none;
+        outline: 0;
+        color:#f0ad4e;
+        cursor:pointer;
+    }
+   
+      
 
 /* ==========================================================================
    2. Typography
@@ -147,7 +163,7 @@ a.bg-primary:hover {
 
 /** BUTTON * ======================================== */
 .btn {
-    border-radius: 0;
+    border-radius: 4px;
     font-family: "Montserrat", sans-serif;
     font-size: 12px;
     line-height: 1.819;
@@ -378,6 +394,16 @@ img {
 
 /*#endregion */
 
+
+/*#region ERROR PAGES */
+#404{
+    font-size:xx-large;
+
+}
+
+
+
+/*#endregion */
 
 /*#endregion */
 
@@ -1276,24 +1302,47 @@ button.btn-search {
 
 /*#region     4.7 ======== SECTION LOGIN */
 
-.help-block a:hover {
-	color: #666;
-    font-weight:800;
- 	text-decoration:underline;
+#loginArea{
+    
+    -webkit-border-radius: 4px;
+     border-radius: 4px;
+     background-color:white;
+     box-shadow: 0px 1px 1px rgba(0,0,0,0.05);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.05)
 }
-.wrapperLogin
-{
-   
 
 
+#loginTitle {
+
+    padding: 30px; 
+    text-align:center
 }
+
+    #loginTitle h4{
+    
+        border-bottom: 1px solid #c5c5c5;
+
+}
+    
 /*#endregion */
 
 
 /*#region     4.8 ======== SECTION CADASTRO */
 
+.cadArea{
+    -webkit-border-radius: 4px;
+     border-radius: 4px;
+     background-color:white;
+     box-shadow: 0px 1px 1px rgba(0,0,0,0.05);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
+    box-shadow: 0px 1px 1px rgba(0,0,0,0.05)
+    }
 
-
+.hrCad {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 /*#endregion */
 
@@ -1366,3 +1415,20 @@ button.btn-search {
 /*#endregion */
 
 
+
+        .alert-message {
+            margin: 20px 0;
+            padding: 20px;
+            border-left: 3px solid #eee;
+        }
+        
+        .alert-message h4 {
+            margin-top: 0;
+            margin-bottom: 5px;
+        }
+        
+        .alert-message p:last-child {
+            margin-bottom: 0;
+        }
+        
+    
