--- a/CorujaPresentation/Views/Conta/Login.cshtml
+++ b/CorujaPresentation/Views/Conta/Login.cshtml
@@ -8,80 +8,81 @@
 
     <div class="container">
 
-        <div class="wrapperLogin">
-
             <h2 class="section-heading text-center">Conta Coruja</h2>
 
             <div class="row">
 
 
-                <div class="col-sm-4 col-sm-offset-4">
+                <div id ="loginArea" class="col-sm-4 col-sm-offset-4">
 
-                    <h4 style="border-bottom: 1px solid #c5c5c5;">
-                        <i class="glyphicon glyphicon-user">
-                        </i>
-                        Acesso à Conta Coruja
-                    </h4>
+                    <div id="loginTitle">
 
-                    <div style="padding: 20px">
-
-                        @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-                        {
-                            <fieldset>
-
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-envelope">
-                                        </i>
-                                    </span>
-                                    @Html.PasswordFor(m => m.Email, new { @class = "form-control" , @placeholder = "Email" })
-                                    @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="form-group input-group">
-                                    <span class="input-group-addon">
-                                        <i class="glyphicon glyphicon-lock">
-                                        </i>
-                                    </span>
-                                    @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Senha" })
-                                    @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                                </div>
-
-                                <div class="form-group">
-
-                                    <div class="pull-left">
-                                        @Html.CheckBoxFor(m => m.RememberMe)
-                                        @Html.LabelFor(m => m.RememberMe)
-                                    </div>
-
-                                </div>
-
-                                <div class="form-group">
-
-                                    <button type="submit" class="btn btn-primary btn-block">
-                                        LOG IN
-                                    </button>
-
-                                    <p class="help-block">
-
-                                        @Html.ActionLink("Esqueceu sua senha?", "LembrarSenha", null, new { @class = "pull-right text-muted" })
-
-                                        @Html.ActionLink("Cadastrar-se", "LembrarSenha", null, new { @class = "pull-left text-muted" })
-                                    </p>
-                                </div>
-
-                            </fieldset>
-
-                        }
+                        <h4>
+                            <i class="glyphicon glyphicon-user">
+                            </i>
+                            Acesso à Conta Coruja
+                        </h4>
 
                     </div>
 
-                </div>
+                        <div style="padding: 30px">
+
+                            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                            {
+                                <fieldset>
+
+                                    <div class="form-group input-group">
+                                        <span class="input-group-addon">
+                                            <i class="glyphicon glyphicon-envelope">
+                                            </i>
+                                        </span>
+                                        @Html.PasswordFor(m => m.Email, new { @class = "form-control" , @placeholder = "Email" })
+                                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                                    </div>
+
+                                    <div class="form-group input-group">
+                                        <span class="input-group-addon">
+                                            <i class="glyphicon glyphicon-lock">
+                                            </i>
+                                        </span>
+                                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Senha" })
+                                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                                    </div>
+
+                                    <div class="form-group">
+
+                                        <div class="pull-left">
+                                            @Html.CheckBoxFor(m => m.RememberMe)
+                                            @Html.LabelFor(m => m.RememberMe)
+                                        </div>
+
+                                    </div>
+
+                                    <div class="form-group">
+
+                                        <button type="submit" class="btn btn-primary btn-block">
+                                            LOG IN
+                                        </button>
+
+                                        <p class="help-block">
+
+                                            @Html.ActionLink("Esqueceu sua senha?", "LembrarSenha", null, new { @class = "pull-right text-muted a" })
+
+                                            @Html.ActionLink("Cadastrar-se", "Cadastro", null, new { @class = "pull-left text-muted a" })
+                                        </p>
+                                    </div>
+
+                                </fieldset>
+
+                            }
+
+                        </div>
+
+                    </div>
 
 
             </div>
 
-        </div>
 
     </div>
 
