--- a/CorujaPresentation/Views/Conta/ShowMsg.cshtml
+++ b/CorujaPresentation/Views/Conta/ShowMsg.cshtml
@@ -7,14 +7,37 @@
          Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1 class="text-danger">@ViewBag.Title</h1>
-@{
-    if (String.IsNullOrEmpty(ViewBag.errorMessage))
-    {
-        <h3 class="text-danger">Erro ao processar a requisição da página</h3>
-    }
-    else
-    {
-        <h3 class="text-danger">@ViewBag.errorMessage</h3>
-    }
-}
+<section id="Msg" class="section section-gray">
+
+
+    <div class="container">
+
+        <h2 class="section-heading text-center text-danger">Canal Coruja</h2>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="alert-message alert-message-warning">
+                    <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
+                    <h4
+                        class="text-danger">@ViewBag.Title
+                    </h4>
+                    @{
+                        if (String.IsNullOrEmpty(ViewBag.errorMessage))
+                        {
+                            <h3 class="text-danger">Erro ao processar a requisição da página</h3>
+                        }
+                        else
+                        {
+                            <h3 class="text-danger">@ViewBag.errorMessage</h3>
+                        }
+                    }
+
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
