--- a/CorujaPresentation/Views/Home/Testes.cshtml
+++ b/CorujaPresentation/Views/Home/Testes.cshtml
@@ -6,53 +6,63 @@
 
 
 
-<section class="section section-gray">
-    
+
+
+<section id="RedefinirSenha" class="section section-gray">
+
+
     <div class="container">
-       
-        <h2 class="section-heading text-center">Canal Coruja</h2>
+
+        <h2 class="section-heading text-center">Conta Coruja</h2>
 
         <div class="row">
-           
-            <div class="col-sm-4">
-                <div class="form-group input-group">
-                    <span class="input-group-addon">
-                        <i class="glyphicon glyphicon-envelope">
-                        </i>
-                    </span>
-                    <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
+            <div class="col-sm-12 col-md-12 alert-message alert-message-warning">
+
+                <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
+                <h4>
+                    Redefinir Senha
+                </h4>
+
+                <div class="col-sm-12 col-md-12">
+
+
+                    <form role="form" class="form-horizontal">
+
+                        <h5>Preencha os campos abaixo</h5>
+                     
+                        <div class="col-xs-6">
+                            <div class="form-group">
+                                <span class="col-md-2 control-label">Email</span>
+                                <div class="col-md-10">
+                                    <input id="Text1" type="text" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-2 control-label">Password</span>
+                                <div class="col-md-10">
+                                    <input id="Text1" type="text" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <span class="col-md-2 control-label">RePassword</span>
+                                <div class="col-md-10">
+                                    <input id="Text1" type="text" class="form-control" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-10">
+                                    <input type="submit" class="btn btn-primary" value="Reset" />
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </form>
 
                 </div>
 
-            </div>
-
-            <div class="col-sm-4"></div>
-
-            <div class="col-sm-4"></div>
- 
-            
-             
-              
 
             </div>
-
-    </div>
-
-</section>
-
-
-
-<section class="section section-red">
-
-
-    <div class="container">
-
-        <h2 class="section-heading text-center">Canal Coruja</h2>
-
-        <div class="row">
-
-            <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
-
         </div>
 
     </div>
@@ -61,19 +71,6 @@
 
 
 
-<section class="section section-dark">
-
-
-    <div class="container">
-
-        <h2 class="section-heading text-center">Canal Coruja</h2>
-
-        <div class="row">
-
-            <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
-
-        </div>
-
-    </div>
-
-</section>
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
