--- a/CorujaPresentation/Views/Shared/Error.cshtml
+++ b/CorujaPresentation/Views/Shared/Error.cshtml
@@ -6,6 +6,7 @@
 
 
 
+
 <section id="Error" class="section section-gray">
 
 
@@ -14,11 +15,19 @@
         <h2 class="section-heading text-center">Canal Coruja</h2>
 
         <div class="row">
+            <div class="col-sm-6 col-md-6">
+                <div class="alert-message alert-message-warning">
+                    <img src="~/Content/CorujaImages/avatar2.png" alt="Coruja">
+                    <h4>
+                        Erro ao processar requisição
+                    </h4>
 
-             <div class="glyphicon-alert text-danger">Erro ao processar requisição</div>
+                </div>
 
-         </div>
+            </div>
+        </div>
 
     </div>
 
 </section>
+
