--- a/CorujaPresentation/Views/Conta/Login.cshtml
+++ b/CorujaPresentation/Views/Conta/Login.cshtml
@@ -10,8 +10,7 @@
 
             <h2 class="section-heading text-center">Conta Coruja</h2>
 
-            <div class="row">
-
+            <div class="row centered-form">
 
                 <div id ="loginArea" class="col-sm-4 col-sm-offset-4">
 
@@ -25,7 +24,7 @@
 
                     </div>
 
-                        <div style="padding: 30px">
+                    <div id="loginBody">
 
                             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
                             {
@@ -78,7 +77,7 @@
 
                         </div>
 
-                    </div>
+                </div>
 
 
             </div>
