--- a/CorujaPresentation/Views/Home/Testes.cshtml
+++ b/CorujaPresentation/Views/Home/Testes.cshtml
@@ -4,6 +4,80 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="container">
+    <h2>Bootstrap Mixed Form <p class="lead">with horizontal and inline fields</p></h2>
+    <form role="form" class="form-horizontal">
+        <div class="form-group">
+            <label class="col-sm-1" for="inputEmail1">Email</label>
+            <div class="col-sm-5"><input type="email" class="form-control" id="inputEmail1" placeholder="Email"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-1" for="inputPassword1">Password</label>
+            <div class="col-sm-5"><input type="password" class="form-control" id="inputPassword1" placeholder="Password"></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-12" for="TextArea">Textarea</label>
+            <div class="col-sm-6"><textarea class="form-control" id="TextArea"></textarea></div>
+        </div>
+
+
+        <div class="form-group">
+
+            <div class="col-sm-3">
+                <label>Nome</label>
+                @Html.EditorFor(m => m.FirstName, new { htmlAttributes = new { @class = "form-control", placeholder = "Nome" } })
+            </div>
+
+            <div class="col-sm-3">
+                <label>Sobrenome</label>
+                @Html.EditorFor(m => m.LastName, new { htmlAttributes = new { @class = "form-control", placeholder = "Sobrenome" } })
+            </div>
+
+        </div>
+
+        <div class="form-group">
+
+            <div class="col-sm-3">
+                <label>Data de Nascimento</label>
+                @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control", placeholder = "Data de Nascimento" } })
+            </div>
+
+            <div class="col-sm-3">
+                <label>Cpf</label>
+                @Html.EditorFor(m => m.Cpf, new { htmlAttributes = new { Id = "Cpf", @class = "form-control", placeholder = "CPF" } })
+            </div>
+
+        </div>
+
+
+
+
+
+
+
+
+
+        <div class="form-group">
+
+            <label class="col-sm-12">Phone number</label>
+            <div class="col-sm-1"><input type="text" class="form-control" placeholder="000"><div class="help">area</div></div>
+            <div class="col-sm-1"><input type="text" class="form-control" placeholder="000"><div class="help">local</div></div>
+            <div class="col-sm-2"><input type="text" class="form-control" placeholder="1111"><div class="help">number</div></div>
+            <div class="col-sm-2"><input type="text" class="form-control" placeholder="123"><div class="help">ext</div></div>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-1">Options</label>
+            <div class="col-sm-2"><input type="text" class="form-control" placeholder="Option 1"></div>
+            <div class="col-sm-3"><input type="text" class="form-control" placeholder="Option 2"></div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-6">
+                <button type="submit" class="btn btn-info pull-right">Submit</button>
+            </div>
+        </div>
+    </form>
+    <hr>
+</div>
 
 
 
