--- a/CorujaPresentation/Content/site.css
+++ b/CorujaPresentation/Content/site.css
@@ -97,7 +97,7 @@ h2, .h2 {
 /* ==========================================================================
    3. COMMON
 ========================================================================== */
-typography tables images buttons labels panels forms inputs toolTip
+/*typography tables images buttons labels panels forms inputs toolTip*/
 
 /*#region COMMON */
 
@@ -1318,7 +1318,7 @@ button.btn-search {
     
     -webkit-border-radius: 4px;
      border-radius: 4px;
-     border: solid 1px #DDDDDD !important;
+     border: solid 1px #DDDDDD;
      background-color:white;
      box-shadow: 0px 1px 1px rgba(0,0,0,0.05);
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
@@ -1327,7 +1327,7 @@ button.btn-search {
 
 #loginTitle {
 
-    padding: 20px 8px 5px 8px; 
+    padding: 20px 5px 5px 5px; 
     text-align:center
 }
     #loginTitle h4{
@@ -1348,38 +1348,34 @@ button.btn-search {
      background-color:white;
      box-shadow: 0px 1px 1px rgba(0,0,0,0.05);
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
-    box-shadow: 0px 1px 1px rgba(0,0,0,0.05)
-    }
-
+     box-shadow: 0px 1px 1px rgba(0,0,0,0.05)
+}
 
 #cadTitle {
-
-    padding: 20px 8px 5px 8px; 
+    padding: 20px 20px 5px 20px; 
     text-align:center
 }
 
-    #cadTitle h4{
+    #cadTitle h3{
+     border-bottom: 1px solid #c5c5c5;
+}
     
-        border-bottom: 1px solid #c5c5c5;
-
+ .cadSectionTitle{
+    color:#ED4F37;
+    font-size:1.5em;
+    margin-bottom:12px;
+    }
+ 
+.cadSection{
+    margin-bottom:22px;
 }
 
+#btnCad{
 
-.cadSubTitle{
-    color:#B13919;
-    font-size:medium;
-}
-
-#cadBody{
-
-    padding:30px;
-}
-
-#rowPessoais{
-    margin-bottom:100px;
+    margin-top:24px;
+    margin-left:95px;
 
 }
-
 
 /*#endregion */
 
